--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -3,8 +3,8 @@ body {
   padding: 50px;
   font-family: neue-haas-unica, "Helvetica Neue", serif, Helvetica, Arial,
     sans-serif;
-  color: #494949;
-  font-weight: 300;
+  color: #313131;
+  font-weight: 400;
   line-height: 1.5;
 }
 
@@ -14,7 +14,7 @@ h3,
 h4,
 h5,
 h6 {
-  color: #222;
+  color: rgb(20, 20, 20);
   margin: 0 0 20px;
 }
 
